--- a/web/src/styles/pages/create-orphanage.css
+++ b/web/src/styles/pages/create-orphanage.css
@@ -87,13 +87,56 @@ form.create-orphanage-form .input-block textarea {
   line-height: 28px;
 }
 
-form.create-orphanage-form .input-block .new-image {
+form.create-orphanage-form .input-block .images-container {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-gap: 16px;
+}
+
+form.create-orphanage-form .input-block .images-container .image-container {
   width: 100%;
-  height: 64px;
+  position: relative;
+}
+
+form.create-orphanage-form .input-block .images-container .image-container img {
+  width: 100%;
+  height: 96px;
+  object-fit: cover;
+  border-radius: 20px;
+  z-index: 0;
+}
+
+form.create-orphanage-form
+  .input-block
+  .images-container
+  .image-container
+  button {
+  width: 18px;
+  height: 18px;
+  border: none;
+  background: none;
+
+  cursor: pointer;
+
+  position: absolute;
+  top: 4px;
+  right: 4px;
+  z-index: 1;
+}
+
+form.create-orphanage-form .input-block .new-image {
+  height: 96px;
   background: #f5f8fa;
   border: 1px dashed #96d2f0;
   border-radius: 20px;
   cursor: pointer;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+form.create-orphanage-form .input-block input[type="file"] {
+  display: none;
 }
 
 form.create-orphanage-form .input-block .button-select {
